Section-5/Ingress/Tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tools-ingress-rule
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /tools
        pathType: Prefix
        backend:
          service:
            name: ingress-tools-app-service
            port:
              number: 80
